--- a/src/app/SharePart/logged-header/logged-header.component.html
+++ b/src/app/SharePart/logged-header/logged-header.component.html
@@ -1,36 +1,37 @@
-<div class="navBar">
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-  <a class="navbar-brand" href="#">Event Planing</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+
+
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#"><img src="assets/_image/cslogo.png" id="navbarimage"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-        
-      <li class="nav-item">
-        
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
         <a class="nav-link" routerLink="/cricket" routerLinkActive="active ">Cricket </a>
-          
       </li>
       <li class="nav-item">
-          <a *ngIf="islogged" class="nav-link" routerLink="/trip" routerLinkActive="active ">Trip </a>
-          
+        <a *ngIf="islogged" class="nav-link" routerLink="/trip" routerLinkActive="active ">Trip </a>
       </li>
       <li class="nav-item">
-          <a *ngIf="isAdmin" class="nav-link" routerLink="/profile/admin" routerLinkActive="active ">Admin Page </a>
-          
+        <a class="nav-link" routerLink="/profile/list" routerLinkActive="active ">Show Employee</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" routerLink="/profile/list" routerLinkActive="active ">Show Employee</a>
-          
+        <a class="nav-link" routerLink="/profile/login" routerLinkActive="active ">Login User</a>
       </li>
-      <li class="nav-item">
-          <a class="nav-link" routerLink="/profile/login" routerLinkActive="active ">Login User</a>
-          
-      </li>
-      <button type="button" class="btn btn-secondary" (click)="logout()">Log out</button>
     </ul>
+     <li class="nav-item dropdown" >
+      <button class="nav-link dropdown-toggle btn btn-outline-secondary" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+       {{EmployeeName}}
+      </button>
+      <div class="dropdown-menu bg-dark text-light" aria-labelledby="navbarDropdownMenuLink">
+        <a class="dropdown-item text-light" href="/profile/profile">Profile</a>
+        <a class="dropdown-item text-light" (click)="logout()" href="#">Log Out</a>
+        
+      </div>
+    </li>
+    <span class="navbar-text">
+   </span>
   </div>
-  
 </nav>
-</div>
