send a email for registration

--- a/src/app/profile/signup-employee/signup-employee.component.css
+++ b/src/app/profile/signup-employee/signup-employee.component.css
@@ -36,3 +36,9 @@ em{
     background-color: #ffd6d5;
   }
  
+  #waiting{
+      color: rgb(119, 28, 24);
+  }
+  #error{
+    color: rgba(185, 7, 7);
+  }
