--- a/src/app/profile/employee-details/employee-details.component.html
+++ b/src/app/profile/employee-details/employee-details.component.html
@@ -46,7 +46,10 @@
                     <div class="form-group col-md-3"><h4>Gender:</h4></div>
                     <div class="form-group col-md-9"><h4>{{result.empGender}}</h4></div>
                 </div>
-              
+                <div class="form-row">
+                  <div class="form-group col-md-3"><h4>Account Open date:</h4></div>
+                  <div class="form-group col-md-9"><h4>{{result.empStartDate| date}}</h4></div>
+              </div>
                 <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
                     <mat-button-toggle class="btn btn-secondary"  value="bold" (click)="goPrevious()">Previous</mat-button-toggle>
                     <mat-button-toggle class="btn btn-secondary"  value="italic" (click)="goNext()">Next</mat-button-toggle>
