--- a/src/app/profile/show-employees-details/show-employees-details.component.html
+++ b/src/app/profile/show-employees-details/show-employees-details.component.html
@@ -1,43 +1,3 @@
-
-<!-- <mat-card class="card">
-    <mat-card-title>
-        show-employees-details
-    </mat-card-title>
-    <mat-card-subtitle>
-      There all Employees Details.
-    </mat-card-subtitle>
-
-<br>
-  <table class="table table-striped ">
-    <tr>
-      <th></th>
-        <th>ID</th>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Address</th>
-      <th></th>
-      <th></th>
-      <th></th>
-     
-    </tr>
-  
-    <tr *ngFor="let i of result;">
-      <td> </td>
-      <td>{{i.empId}}</td>
-      <td>{{i.empName}}</td>
-      <td>{{i.empEmail}}</td>
-      <td>{{i.empAddress1}} {{i.empAddress2}}</td>
-      <td><button type="button" id="details" class="btn btn-default" (click)=detailsemployee(i.empId)>Details</button></td>
-            <td><button type="button" id="update" class="btn btn-success" >Update</button></td>
-            <td><button type="button" id="delete" class="btn btn-danger" (click)=deleteEmployee(i.empId)>Delete</button></td>
-         
-     
-    </tr>
-  </table>
-  </mat-card> -->
-
-
-<!------ Include the above in your HEAD tag ---------->
 <app-logged-header></app-logged-header>
 
 <div class="container">
@@ -50,8 +10,13 @@
 						
 					</div>
 					<div class="panel-body">
-						<input type="text" class="form-control" id="dev-table-filter" data-action="filter" data-filters="#dev-table" placeholder="Filter Developers" />
-          </div>
+              <div class=" input-group mb-3" [class.error]="isNotEmail">
+                  <div class="input-group-prepend">
+                  <label (click)=filterInput() class="input-group-text" for="filter">Search.. </label>
+                  </div>
+						<input *ngIf="toggle" [(ngModel)]="filtertext"  type="text" class="form-control" id="filter" data-action="filter" data-filters="#dev-table" placeholder="Filter Developers" />
+             
+          
           <div class="table-responsive" id="table">
 					<table class="table table-hover">
             <thead>
@@ -67,15 +32,15 @@
              
             </tr></thead>
             <tbody>
-            <tr *ngFor="let i of result;">
-              <td>{{i.empId}}</td>
+            <tr *ngFor="let i of result | filterPipe: filtertext" >
+              <td >{{i.empId}}</td>
               <td>{{i.empName}}</td>
               <td>{{i.empEmail}}</td>
               <td>{{i.empAddress1}} {{i.empAddress2}}</td>
               <td>{{i.empPosition}}</td>
               <td><button type="button" id="details" class="btn  btn-default" (click)=detailsemployee(i.empId)>Details</button></td>
                     <td><button type="button" id="update" class="btn  btn-success" (click)=updateEmployee(i.empId)>Update</button></td>
-                    <td *ngIf="isAdmin"><button type="button" id="delete" class="btn  btn-danger" (click)=deleteEmployee(i.empId)>Delete</button></td>
+                    <td *ngIf="isAdmin"><button type="button" id="delete" class="btn  btn-danger" (click)=deActiveEmployee(i.empId)>Delete</button></td>
                  
              
             </tr>
@@ -85,5 +50,7 @@
 				</div>
 			</div>
 			
-		</div>
-	</div>
+    </div>
+    
+   
+  
