--- a/src/app/SharePart/logged-header/logged-header.component.html
+++ b/src/app/SharePart/logged-header/logged-header.component.html
@@ -20,6 +20,10 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/profile/login" routerLinkActive="active ">Login User</a>
       </li>
+      <li>
+          <a class="nav-link" routerLink="/profile/admin" routerLinkActive="active ">Admin page</a>
+     
+      </li>
     </ul>
      <li class="nav-item dropdown" >
       <button class="nav-link dropdown-toggle btn btn-outline-secondary" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
