--- a/src/app/profile/employee-profile/employee-profile.component.html
+++ b/src/app/profile/employee-profile/employee-profile.component.html
@@ -8,7 +8,7 @@
             <div class="col-md-4 py-5 text-white text-center " id="sideA">
                 <div class="sideA">
                     <div class="card-body">
-                        <img src="assets/_image/cslogo.png" style="width:30%">
+                        <img [src]="ProfileImage" style="width:70%">
                         
                         <h2 class="py-3">{{result.empName}}</h2>
                         <p>Tation argumentum et usu, dicit viderer evertitur te has. Eu dictas concludaturque usu, facete detracto patrioque an per, lucilius pertinacia eu vel.
