--- a/src/app/profile/login-employee/login-employee.component.css
+++ b/src/app/profile/login-employee/login-employee.component.css
@@ -1,7 +1,10 @@
 /*    --------------------------------------------------
 	:: Login Section
     -------------------------------------------------- */
-    
+    #loadImage{
+        width: 50px;
+        height: 50px;;
+    }
     #crateAccountlink{
         
         color:rgb(180, 53, 15);
@@ -114,6 +117,7 @@
     width:100%;
     padding : 50px 0;
     }
+
    
 .btn-login{ color:rgb(17, 16, 16); font-weight:600;}
 .banner-text{width:70%; position:absolute; bottom:40px; padding-left:20px;}
