--- a/src/app/profile/admin-page/admin-page.component.html
+++ b/src/app/profile/admin-page/admin-page.component.html
@@ -21,11 +21,13 @@
               <div class="btn-group" role="group" aria-label="Basic example">
                   <button (click) ="isdepartment()"  type="button" class="btn btn-secondary"> Create Departments</button>
                   <button (click)="isrole()" type="button" class="btn btn-secondary"> Create Roles</button>
+                  <button (click)="isproject()" type="button" class="btn btn-secondary"> Create Project</button>
                   <br>
                 </div>
                 <br><br><br>
               <div *ngIf="department"><app-department-create></app-department-create></div>
               <div *ngIf="role"><app-role-create></app-role-create></div>
+              <div *ngIf="project"><app-project-create></app-project-create></div>
               
                
               <!-- <app-show-departments-details></app-show-departments-details> -->
@@ -36,6 +38,7 @@
               <div class="btn-group" role="group" aria-label="Basic example">
                   <button routerLink="/profile/admin/departments" routerLinkActive="active" type="button" class="btn btn-secondary">View Departments</button>
                   <button routerLink="/profile/admin/roles" routerLinkActive="active" type="button" class="btn btn-secondary">View Roles</button>
+                  <button routerLink="/profile/admin/project" routerLinkActive="active" type="button" class="btn btn-secondary">View Projects</button>
                   
                 </div>
               <router-outlet></router-outlet>
