--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<!-- ishani -->
+<!-- sanjeewa -->
+<!-- dilshani -->
 
 <div class="top">
     <div class="titleBar">
@@ -7,7 +8,7 @@
                     <img src="assets/_image/logo-white.png" >
             </div>
             <div class="col-8">
-                    <h1 >Event Managment System</h1>
+                    <h1 >Event Menagment System</h1>
             </div>
             <div class="col-2"></div>
            </div> 
