--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<!-- sanjeewa -->
-<!-- snjeewa -->
+
 
 <div class="top">
     <div class="titleBar">
@@ -8,7 +7,7 @@
                     <img src="assets/_image/logo-white.png" >
             </div>
             <div class="col-8">
-                    <h1 >Event Managment System</h1>
+                    <!-- <h1 >Event Management System</h1> -->
             </div>
             <div class="col-2"></div>
            </div> 
