--- a/src/app/profile/show-employees-details/show-employees-details.component.html
+++ b/src/app/profile/show-employees-details/show-employees-details.component.html
@@ -1,6 +1,6 @@
 <app-logged-header></app-logged-header>
 
-<div class="container">
+<div id="table" class="container">
     
     	<div class="row">
 			<div class="col-md-12">
@@ -18,7 +18,7 @@
              
           
           <div class="table-responsive" id="table">
-					<table class="table table-hover">
+					<table class="table">
             <thead>
             <tr >
                 <th>ID</th>
@@ -28,7 +28,7 @@
               <th>Position</th>
               <th></th>
               <th></th>
-              <th></th>
+            
               <th *ngIf="isAdmin"></th>
              
             </tr></thead>
