--- a/src/app/profile/signup-employee/signup-employee.component.html
+++ b/src/app/profile/signup-employee/signup-employee.component.html
@@ -1,8 +1,165 @@
 
+<div  id = "back">
+        
+    <div *ngIf="!IsLogin" class="wrapper fadeInDown col-md-8 container">
+      <div id="formContent">
+        <!-- Tabs Titles -->
+    
+        <!-- Icon -->
+        <div class="fadeIn first">
+      
+          <img   [src]="ImageUrl" id="icon" alt="User Icon" > 
+          <h1>Sign up</h1>
+        </div>
+    
+        <!-- Sign up Form -->
+        <form [formGroup]="ownerForm" autocomplete="off" novalidate (ngSubmit)="createOwner(ownerForm.value)">
+             
+            <div class="form-row">
+                <div class="form-group col-md-12">
+                  <input  placeholder="Full Name" class="form-control" type="text" formControlName="name" id="name">
+                  <em *ngIf="validateControl('name') && hasError('name', 'required')">*Name is required</em>
+                  
+                  
+                </div>
+                <div class="form-group col-md-6">
+                  <input type="email" class="form-control"  placeholder="Email" formControlName="email" id="email">
+                  <em *ngIf="validateControl('email') && hasError('email', 'required')">*Email is required</em>
+                  <em *ngIf="validateControl('email') && hasError('email', 'email')">*Not a valid email</em>
+         
+                   
+                </div>
+                <div class="form-group col-md-6">
+                      <input type="text" class="form-control"  placeholder="Enter Id" formControlName="id" id="id">
+                      <em *ngIf="validateControl('id') && hasError('id', 'required')">*Id is required</em>
+                       <em *ngIf="validateControl('id') && hasError('id', 'maxlength')">*Maximum allowed length is 6 characters.</em>
+              
+              </div>
+              <div class="form-group col-md-6">
+                      <input  placeholder="Mobile No." class="form-control" type="text" formControlName="contact" id="contact">
+                      <em *ngIf="validateControl('contact') && hasError('contact', 'required')">*Contact is required</em>
+                      <em *ngIf="validateControl('contact') && hasError('contact', 'maxlength')">*Maximum allowed length is 6 characters.</em>
+             
+                  </div>
+              </div>
+              <div class="form-row">
+                      <div class="form-group col-md-6">
+                          <input  placeholder="Password" class="form-control" type="password" formControlName="password" id="password">
+                          <em *ngIf="validateControl('password') && hasError('password', 'required')">*Password is required</em>
+                          <em *ngIf="validateControl('password') && hasError('password', 'maxlength')">*Maximum allowed length is 6 characters.</em>
+                          
+                 
+                      </div>
+                      <div class="form-group col-md-6">
+                              <input  placeholder="Re Again Password" class="form-control" formControlName="confirmpassword" type="password" id="confirmpassword">
+                              <em *ngIf="validateControl('confirmpassword') && hasError('confirmpassword', 'required')">*Password is required</em>
+                              <em *ngIf="((ownerForm.errors?.ismatch) )">*confirm password is not match</em> 
+                              
+                          </div>
+              </div>
+
+              
+
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <input  placeholder="Address city" class="form-control" type="text" formControlName="address1" id="address1">
+                    <em *ngIf="validateControl('address1') && hasError('address1', 'required')">*City is required</em>
+                    <em *ngIf="validateControl('address1') && hasError('address1', 'maxlength')">*Maximum allowed length is 6 characters.</em>
+           
+                </div>
+                <div class="form-group col-md-6">
+                      <input  placeholder="Address Lane" class="form-control" type="text" formControlName="address2" id="address2">
+                      <em *ngIf="validateControl('address2') && hasError('address2', 'required')">*Town  is required</em>
+                      <em *ngIf="validateControl('address2') && hasError('address2', 'maxlength')">*Maximum allowed length is 6 characters.</em>
+             
+                  </div>
+                <div class="form-group col-md-6">
+                          
+                          <select class="form-control" formControlName="department" placeholder="Department" id="department">
+                                  <option value="" selected disabled hidden>Departments</option>
+                                  <option [value]="d.dprtId" *ngFor="let d of departments">{{d.dprtName}}</option>
+                              </select>
+                </div>
+                <em *ngIf="validateControl('department') && hasError('department', 'required')">*Department is required</em>
+                <em *ngIf="validateControl('department') && hasError('department', 'maxlength')">*Maximum allowed length is 6 characters.</em>
+                <div class="form-group col-md-6" >
+                   <h6>Add a Profile picture <input type="file" (change)="onFileChange($event.target.files)" />
+                   </h6> 
+                   
+                  </div>
+               
+            </div>
+            
+            <div class="form-group col-md-8">
+                  <div class ="row">
+                      <div class="form-group col-md-4 " >
+                        <label class="gender">Gender:</label>
+                      </div>
+                      <div class="form-group col-md-1 ">
+                              <label class="gender">Male:</label>
+                      </div>
+                      <div class="form-group col-md-2 ">
+                                 
+                          <input type="radio" name="gender"   value="male" formControlName="gender" >
+                      </div>
+                      <div class="form-group col-md-2 ">
+                              <label class="gender">Female:</label>
+                      </div>
+                      <div class="form-group col-md-1 ">
+                      
+                          <input type="radio"  name="gender"  value="female"formControlName="gender"  >
+                      </div></div>
+                      <em *ngIf="validateControl('gender') && hasError('gender', 'required')">*Id is required</em>
+                      <em *ngIf="validateControl('gender') && hasError('gender', 'maxlength')">*Maximum allowed length is 6 characters.</em>
+             
+                    </div>
+            <div class="form-row">
+                <div class="form-group">
+                    <div class="form-group">
+                        <div class="form-check">
+                          <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
+                          <label class="form-check-label" for="invalidCheck2">
+                            <small>By clicking Submit, you agree to our Terms & Conditions, Visitor Agreement and Privacy Policy.</small>
+                          </label>
+                        </div>
+                      </div>
+            
+                  </div>
+            </div>
+            <em *ngIf="isAvalibleemail"> This Email already registered!</em>
+            <em id="error">{{message}}</em>
+            <div class="form-row">
+                <div class="form-group container">
+                          <div class="btn-group" role="group" aria-label="Basic example">
+                              
+                              <button type="submit" class="btn" [disabled]="!ownerForm.valid">Next</button>
+                          </div>
+                          
+                          <div *ngIf="(waiting)" > <p id="waiting" *ngIf="wait"> Waiting for while... . .</p><img id="loadImage" style=" width : 35px;" class="card-img-top" src="assets/loading1.gif" alt="Cinque Terre" id="loading"></div>
+                          
+   
+                      </div>
+            </div>
+        </form>
+            <!-- <div class="copy-text">For Create new account? <i class="fa fa-heart"></i><a id="crateAccountlink"  (click)="crateAccount()"> Create</a></div> -->
+            
+        <!-- Remind Passowrd -->
+        <div id="formFooter">
+          <a  id="crateAccountlink"  class="underlineHover" (click)="redirectToOwnerList()">Sign in</a>
+         
+        </div>
+    
+      </div>
+    </div>
+
+    <div *ngIf="IsLogin" id="register">
+            <app-employee-register></app-employee-register>
+          </div>
+    </div>
 
 
-
-<section class="testimonial py-5" id="testimonial">
+<!-- <div  class="">
+<section class="testimonial py-5 " id="testimonial">
   <div class="container">
       <div class="row ">
           <div class="col-md-4 py-5 text-white text-center " id="sideA">
@@ -94,7 +251,7 @@
                       <div class="form-group col-md-6" >
                          <h6>Add a Profile picture <input type="file" (change)="onFileChange($event.target.files)" />
                          </h6> 
-                           <!-- <img *ngIf="ImageUrl[2]" [src]="ImageUrl[2]" style="width:250px; height:200px">  -->
+                         
                         </div>
                      
                   </div>
@@ -161,3 +318,4 @@
   
 
 </section>
+</div> -->
