add my project-sanjeewa

--- a/src/app/SharePart/logged-header/logged-header.component.html
+++ b/src/app/SharePart/logged-header/logged-header.component.html
@@ -9,7 +9,7 @@
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/cricket" routerLinkActive="active ">Cricket </a>
+        <a class="nav-link" routerLink="/profile/home" routerLinkActive="active ">Home </a>
       </li>
       <li class="nav-item">
         <a *ngIf="islogged" class="nav-link" routerLink="/trip" routerLinkActive="active ">Trip </a>
