--- a/src/styles.css
+++ b/src/styles.css
@@ -331,4 +331,4 @@ body { margin: 0; font-family: 'Roboto', sans-serif; }
  #formContent   form{
         padding: 60px;
     }
-/********************************/
+/*************************************/
