--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
                     <img src="assets/_image/logo-white.png" >
             </div>
             <div class="col-8">
-                    <!-- <h1 >Event Management System</h1> -->
+                    <!-- <h1 >Event Management </h1> -->
             </div>
             <div class="col-2"></div>
            </div> 
