add my project-ishani

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
                     <img src="assets/_image/logo-white.png" >
             </div>
             <div class="col-8">
-                    <h1 >Event Managment System</h1>
+                    <h1 >TheEvent</h1>
             </div>
             <div class="col-2"></div>
            </div> 
