--- a/src/app/profile/employee-details/employee-details.component.html
+++ b/src/app/profile/employee-details/employee-details.component.html
@@ -1,8 +1,8 @@
 <app-logged-header></app-logged-header>
-<br>
 
 
-<section class="testimonial py-5 container" id="testimonial">
+
+<!-- <section class="testimonial py-5 container" id="testimonial">
     <div class="container">
         <div class="row ">
             <div class="col-md-4 py-5 text-white text-center " id="sideA">
@@ -60,4 +60,4 @@
         </div>
     </div>
   </section>
-  
+   -->
