add changes 1-ishani

--- a/src/app/SharePart/logged-header/logged-header.component.html
+++ b/src/app/SharePart/logged-header/logged-header.component.html
@@ -1,12 +1,10 @@
 
 
 
-<<<<<<< HEAD
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-=======
 <nav id="navBar" class="navbar navbar-expand-lg ">
   <a class="navbar-brand" href="#"><img src="assets/_image/cslogo.png" id="navbarimage"></a>
->>>>>>> 708335351460bfd6459547d3177ec985eec6e00c
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -26,6 +24,10 @@
       </li>
       <li>
           <a class="nav-link" routerLink="/profile/admin" routerLinkActive="active ">Admin page</a>
+     
+      </li>
+      <li>
+          <a class="nav-link" routerLink="/profile/admin" routerLinkActive="active ">Admin</a>
      
       </li>
     </ul>
