--- a/src/app/profile/homepage/homepage.component.html
+++ b/src/app/profile/homepage/homepage.component.html
@@ -1,7 +1,7 @@
 
     
    <app-logged-header></app-logged-header>
-<div id="homeback">
+<div id="homeback" >
 
 
 <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
@@ -24,175 +24,90 @@
 </div>
 
 <div id="part1">
-  <div class="row card-group container">
-
-    <div class="col-sm-4">
-        <a href="events/upComingEvents"  >
-      <div class="card mb-5" style="width: 16rem;">
-        <img class="card-img-top" src="https://media.urbanistnetwork.com/saigoneer/article-images/legacy/Vm1pSRPb.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title"><br/>Upcoming Events</h5>
-         
-          
-         
-        </div>
-      </div>
-      </a>
-    </div>
-
-
-    <div class="col-sm-4">
-        <a href="events/previousEvent"  >
-        <div class="card mb-5" style="width: 16rem;">
-          <img class="card-img-top" src="https://media.urbanistnetwork.com/saigoneer/article-images/legacy/Vm1pSRPb.jpg" alt="Card image cap">
+  
+    <div id="cardDesk" class="card-deck" >
+        <div class="card">
+          <img class="card-img-top" src="assets\_image\employees_card_31256.png" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title"><br/>Previous Evenst</h5>
-           
+            <a href="/task/addtask"><h5 class="card-title">Assignments</h5></a> 
+            <p class="card-text">Assign tasks to RC members, get notified when task is updated or completed</p>
           </div>
         </div>
-        </a>
+    
+        <div class="card">
+          <img class="card-img-top" src="assets\_image\assi.png" alt="Card image cap">
+          <div class="card-body">
+            <a href="/task/list"><h5 class="card-title">Overview</h5></a>
+            <p class="card-text">Overview of all tasks in one place.</p>
+          </div>
+        </div>
+        
+        <div class="card">
+          <img class="card-img-top" src="assets\_image\email.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Email Tasks</h5>
+            <p class="card-text">Create tasks by sending email to RC's account</p>
+          </div>
+        </div>
       </div>
 
-
-      <div class="col-sm-4">
-          <a href="events/viewTask"  >
-          <div class="card mb-5" style="width: 16rem;">
-            <img class="card-img-top" src="https://media.urbanistnetwork.com/saigoneer/article-images/legacy/Vm1pSRPb.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title"><br/>My Tasks</h5>
-              
-              
-             
-            </div>
-          </div>
-          </a>
-        </div>
-
-        <div class="col-sm-4">
-            <a href="events/createEventPageForTrip"  >
-            <div class="card mb-5" style="width: 16rem;">
-              <img class="card-img-top" src="https://media.urbanistnetwork.com/saigoneer/article-images/legacy/Vm1pSRPb.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title"><br/>Create Event</h5>
-               
-                
-               
-              </div>
-            </div>
-            </a>
-          </div>
-    
-  </div>
 </div>
 
 <div id="part2">
-  <div class="row card-group container">
-
-    <div class="col-sm-4">
-        <a href="events/upComingEvents"  >
-      <div class="card mb-5" style="width: 16rem;">
-        <img class="card-img-top" src="https://media.urbanistnetwork.com/saigoneer/article-images/legacy/Vm1pSRPb.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title"><br/>Upcoming Events</h5>
-         
-          
-         
-        </div>
-      </div>
-      </a>
-    </div>
-
-
-    <div class="col-sm-4">
-        <a href="events/previousEvent"  >
-        <div class="card mb-5" style="width: 16rem;">
-          <img class="card-img-top" src="https://media.urbanistnetwork.com/saigoneer/article-images/legacy/Vm1pSRPb.jpg" alt="Card image cap">
+    <div id="cardDesk" class="card-deck" >
+        <div class="card">
+          <img class="card-img-top" src="assets\_image\employees_card_31256.png" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title"><br/>Previous Evenst</h5>
-           
+            <a href="/task/addtask"><h5 class="card-title">Assignments</h5></a> 
+            <p class="card-text">Assign tasks to RC members, get notified when task is updated or completed</p>
           </div>
         </div>
-        </a>
-      </div>
-
-
-      <div class="col-sm-4">
-          <a href="events/viewTask"  >
-          <div class="card mb-5" style="width: 16rem;">
-            <img class="card-img-top" src="https://media.urbanistnetwork.com/saigoneer/article-images/legacy/Vm1pSRPb.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title"><br/>My Tasks</h5>
-              
-              
-             
-            </div>
-          </div>
-          </a>
-        </div>
-
-        <div class="col-sm-4">
-            <a href="events/createEventPageForTrip"  >
-            <div class="card mb-5" style="width: 16rem;">
-              <img class="card-img-top" src="https://media.urbanistnetwork.com/saigoneer/article-images/legacy/Vm1pSRPb.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title"><br/>Create Event</h5>
-               
-                
-               
-              </div>
-            </div>
-            </a>
-          </div>
     
-  </div>
+        <div class="card">
+          <img class="card-img-top" src="assets\_image\assi.png" alt="Card image cap">
+          <div class="card-body">
+            <a href="/task/list"><h5 class="card-title">Overview</h5></a>
+            <p class="card-text">Overview of all tasks in one place.</p>
+          </div>
+        </div>
+        
+        <div class="card">
+          <img class="card-img-top" src="assets\_image\email.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Email Tasks</h5>
+            <p class="card-text">Create tasks by sending email to RC's account</p>
+          </div>
+        </div>
+      </div>
 </div>
 
 <div id="part3">
-  <div class="row card-group container">
 
-    <div class="col-sm-4">
-        <a href="events/upComingEvents"  >
-      <div class="card mb-5" style="width: 16rem;">
-        <img class="card-img-top" src="https://media.urbanistnetwork.com/saigoneer/article-images/legacy/Vm1pSRPb.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title"><br/>Upcoming Events</h5>
-         
-          
-         
-        </div>
+  
+<div id="cardDesk" class="card-deck" >
+    <div class="card">
+      <img class="card-img-top" src="assets\_image\employees_card_31256.png" alt="Card image cap">
+      <div class="card-body">
+        <a href="/task/addtask"><h5 class="card-title">Assignments</h5></a> 
+        <p class="card-text">Assign tasks to RC members, get notified when task is updated or completed</p>
       </div>
-      </a>
     </div>
 
-
-    <div class="col-sm-4">
-        <a href="events/previousEvent"  >
-        <div class="card mb-5" style="width: 16rem;">
-          <img class="card-img-top" src="https://media.urbanistnetwork.com/saigoneer/article-images/legacy/Vm1pSRPb.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title"><br/>Previous Evenst</h5>
-           
-          </div>
-        </div>
-        </a>
+    <div class="card">
+      <img class="card-img-top" src="assets\_image\assi.png" alt="Card image cap">
+      <div class="card-body">
+        <a href="/task/list"><h5 class="card-title">Overview</h5></a>
+        <p class="card-text">Overview of all tasks in one place.</p>
       </div>
+    </div>
 
-
- 
-        <div class="col-sm-4">
-            <a href="events/createEventPageForTrip"  >
-            <div class="card mb-5" style="width: 16rem;">
-              <img class="card-img-top" src="https://media.urbanistnetwork.com/saigoneer/article-images/legacy/Vm1pSRPb.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title"><br/>Create Event</h5>
-               
-                
-               
-              </div>
-            </div>
-            </a>
-          </div>
-    
+    <div class="card">
+      <img class="card-img-top" src="assets\_image\email.png" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Email Tasks</h5>
+        <p class="card-text">Create tasks by sending email to RC's account</p>
+      </div>
+    </div>
   </div>
 </div>
 
